[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microfarm_rpc"
version = "0.1"
authors = [
    {name = "Souheil Chelfouh", email = "sch@treegital.fr"},
]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "pydantic >= 2",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]